30/jan/2022 - 1.11.0


» features   -^^,--,~
› add changelog 📋
› add HelpUsage class ❓
› choice: better types 🗨️

» styles   -^^,--,~
› toRawEmoji: update @see 🔗
› number: "inclusive" isn't really needed in description 💎

» code refactoring   -^^,--,~
› don't export types 📴

» chores   -^^,--,~
› bump Node.js version 📦
› improve typings 🔝



02/feb/2022 - 1.12.0


» features   -^^,--,~
› HelpUsage: prefer static methods



05/feb/2022 - 1.12.1

» features   -^^,--,~
› set: better types

» code refactoring   -^^,--,~
› rename to "help" and convert into named functions



11/feb/2022 - 1.13.0

» features   -^^,--,~
› toRawEmoji: rename to partialEmoji 🔁



16/feb/2022 - 1.13.1

» features   -^^,--,~
› sendBotError: don't add slash to message or user commands 🤖



17/feb/2022 - 1.13.2

» features   -^^,--,~
› emojis: new emojis 🐾

» bug fixes   -^^,--,~
› sendBotError: fix message timestamp formatting 🕒



18/feb/2022 - 1.14.0

» features   -^^,--,~
› data: add url 🔗
› sendBotError: remove message content and components from error message 🛑

» bug fixes   -^^,--,~
› emoji: add missing (though redundant) type in file 💬

» styles​ ​ ​ -^^,--,~
› prefer "regular expression" over "regex" 📄



19/feb/2022 - 1.14.1

» features   -^^,--,~
› emojis: added emojis 🦊



22/feb/2022 - 1.14.2

» features   -^^,--,~
› emojis: added emojis 🦊



24/feb/2022 - 1.14.3

» features   -^^,--,~
› emojis: added emojis 🦊



27/feb/2022 - 1.14.4

» bug fixes   -^^,--,~
› help: arrow functions aren't bound to scope, so can't use `this` (oops) ➡️



27/feb/2022 - 1.14.5

» bug fixes   -^^,--,~
› help: discard `this` scope, just use variables 💬

» reverts   -^^,--,~
› revert "v1.14.4 🎉🐾" (eb765c9)