@@ -107,6 +107,8 @@
 
 » bug fixes   -^^,--,~
 › help: discard `this` scope, just use variables 💬
+› help: no arrow functions (see 1.14.4) ➡️
 
 » reverts   -^^,--,~
-› revert "v1.14.4 🎉🐾" (eb765c9)
+› revert "v1.14.4 🎉🐾" (eb765c9) 🔁
+› un-revert "v1.14.4 🎉🐾" (eb765c9) (see second bug fix) 🔁🔁
